# statusd

./: Cargo.toml  README.md
src/: battery.rs  clock.rs  dbus.rs  main.rs  notifications.rs  xsetroot.rs
src/notifications/: dbus.rs  mod.rs  store.rs
src/notifications/notification/: hints.rs  mod.rs
