[package]
name = "statusd"
version = "0.1.0"
authors = ["Hayley Hughes <hayley@foxes.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
log = "0.4.11"
pretty_env_logger = "0.4.0"
x11 = { version = "2.18.2", features = ["xlib"] }
zbus = "1.3.0"
zvariant = "2.3.0"

