[package]
name = "statusd"
version = "0.1.0"
authors = ["Hayley Hughes <hayley@foxes.systems>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_repr = "0.1.16"
x11 = { version = "2.21.0", features = ["xlib"] }
zbus = "3.14.1"

