[package]
name = "statusd"
version = "0.1.0"
authors = ["Hayley Hughes <hayley@foxes.systems>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
x11 = { version = "2.21.0", features = ["xlib"] }
zbus = { version = "3.14.1", features = ["tokio"] }

